# residency-mastermind

./: .gitignore  README.md  README_objective.md  config.py  config.yaml  constraints.py  data_handler.py  data_io.py  data_model.md  date_handling.py  demo_optimization.py  display.py  faux_data_generation.py  interface.py  main.py  optimization.py  pyproject.toml  real_2026_data_residents.csv  real_2026_data_rotations.csv  real_2026_data_weeks.csv  real_2026_forced_trues.csv  real_2026_preferences.csv  real_2026_vacation_preferences.csv  requirement_builder.py  requirements.txt  requirements.yaml  residency_mastermind.json  residency_mastermind.sql  resident_requests_processor.py  rotation_builder.py  rotations_2026.yaml  schedule_2026.yaml  schedule_config.py  scratch_inheritance.py  scratch_output.csv  selection.py  seniors_only_anonymized.sql  test_2026_output.xlsx  test_2026_real_data.py  test_constraints.py  (+9 more)
docs/: purple_problem.md  todo.md
inputs_2026/: data_model.md  real_2026_data_rotations.csv  real_2026_preferences.yaml  rotations_2026.yaml  schedule_2026.yaml
refactor_data_auxiliary_files/: contiguity_preoptimization.md  data_model.md  scratch_inheritance.py  structure.md
refactor_data_auxiliary_files/example_fileset/: requirements_R3_pct.yaml  requirements_R3_standard.yaml  resident_requests.csv  residents_2026.csv  rotations_2026.yaml
refactor_data_auxiliary_files/inputs_2026/: real_2026_overrides.csv  requirements_R2_pct.yaml  requirements_R2_standard.yaml
references/: old_optimizer.py
setup/: or-tools_conda.yml
test_data/: test_residents_real_size.csv  test_residents_real_size_R3_only.csv  test_residents_tiny.csv  test_rotations_doable_with_R2s.csv  test_rotations_minimal.csv  test_rotations_real_size.csv  test_weeks_2024_2027_three_years.csv  test_weeks_2025_2026.csv  test_weeks_tiny_10wk.csv
testing/: data_generator.py  preferences.csv  residents.csv  rotation_categories.csv  rotation_master.db  rotation_requirements.csv  rotations.csv  test_data_handling.py  weeks.csv  weeks_manually_generated.csv
tools/: display.py
