[project]
name = "residency-mastermind"
version = "0.5.2a1"
description = "Constraint satisfaction-based residency scheduling solver with support for complex structures of rotations, requirements, and preferences."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
core = [
    "fastexcel>=0.19.0",
    "numpy>=2.4.2",
    "polars>=1.35.1",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "xlsxwriter>=3.2.9",
]
database = [
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.44",
]
solver = [
    "cpmpy>=0.9.28",
    "ortools>=9.14.6206",
]
testing = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "faker>=37.12.0",
]

[project.optional-dependencies]
code-editor = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
hand-profiling = [
    "marimo>=0.17.6",
]

