[project]
name = "residency-mastermind"
version = "0.8.0dev1"
description = "Constraint satisfaction-based residency scheduling solver with support for complex structures of rotations, requirements, and preferences."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
core = [
    "mergedeep>=1.3.4",
    "polars>=1.40.1",
    "pyyaml>=6.0.3",
]
solver = [
    "cpmpy>=0.9.28",
    "ortools>=9.15.6755",
]

[project.optional-dependencies]
testing = [
    "loguru>=0.7.3",
    "pytest>=9.0.3",
]
code-editor = [
    "ruff>=0.15.13",
]
hand-profiling = [
    "marimo>=0.23.6",
]
